import configureStore from '../__test-helpers__/configureStore'
import { createApp } from '../src'


describe('createApp(store, Class) ', () => {
  it('app.tree()', () => {

  })

  it('app.snap()', () => {

  })

  it('app.component()', () => {

  })

  it('app.element() [alias: app.story()]', () => {

  })

  it('app.dispatch()', () => {

  })

  it('app.getState()', () => {

  })
})


describe('createApp(store, Class, mapStateToProps)', () => {
  it('mapStateToProps == object', () => {

  })

  it('mapStateToProps == function', () => {

  })
})
