// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createApp(store, Class)  app.component() 1`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    0
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class)  app.dispatch() 1`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    0
  </span>
</div>
`;

exports[`createApp(store, Class)  app.getState() 1`] = `
Object {
  "empty": false,
  "num": 0,
}
`;

exports[`createApp(store, Class)  app.getState() 2`] = `
Object {
  "empty": false,
  "num": 1,
}
`;

exports[`createApp(store, Class)  app.snap() 1`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    0
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class)  app.snap(action) 1`] = `
Object {
  "type": "INCREMENT",
}
`;

exports[`createApp(store, Class)  app.snap(action) 2`] = `
Object {
  "empty": false,
  "num": 1,
}
`;

exports[`createApp(store, Class)  app.snap(action) 3`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    1
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class)  app.snap(thunkAction) 1`] = `"thunk"`;

exports[`createApp(store, Class)  app.snap(thunkAction) 2`] = `
Object {
  "empty": false,
  "num": 1,
}
`;

exports[`createApp(store, Class)  app.snap(thunkAction) 3`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    1
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class)  app.snapState() 1`] = `
Object {
  "empty": false,
  "num": 1,
}
`;

exports[`createApp(store, Class)  app.tree() 1`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    0
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class)  app.tree() and app.component().toJSON() updates in response to state changes 1`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    0
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class)  app.tree() and app.component().toJSON() updates in response to state changes 2`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    0
  </span>
</div>
`;

exports[`createApp(store, Class)  app.tree() and app.component().toJSON() updates in response to state changes 3`] = `
<div>
  <h1>
    a title
  </h1>
  <span>
    1
  </span>
</div>
`;

exports[`createApp(store, Class, mapStateToProps) mapStateToProps == function 1`] = `
<div>
  <h1>
    title: 0
  </h1>
  <span>
    0
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class, mapStateToProps) mapStateToProps == function 2`] = `
<div>
  <h1>
    title: 1
  </h1>
  <span>
    1
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class, mapStateToProps) mapStateToProps == object 1`] = `
<div>
  <h1>
    FOO
  </h1>
  <span>
    0
  </span>
  <span>
    something
  </span>
</div>
`;

exports[`createApp(store, Class, mapStateToProps) mapStateToProps == object 2`] = `
<div>
  <h1>
    FOO
  </h1>
  <span>
    1
  </span>
  <span>
    something
  </span>
</div>
`;
